--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/031722a6cc.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/style.css" />
     <title>Chat | Kakao Clone</title>
   </head>
   <body>
@@ -41,17 +42,25 @@
       <ul class="chats__list">
         <li class="chats__chat">
           <a href="chat.html">
-            <div class="chat__column">
-              <img class="chat__avatar g-avatar" src="imgs/we.jpg" />
-              <div class="chat__contennt">
-                <span class="chat__username">
-                  Lynn
-                </span>
-                <span class="chat__preview">Going home</span>
+            <div class="chats__chat friend friend--lg">
+              <div class="friend__column">
+                <img src="imgs/we.jpg" class="m-avatar friend__avatar" />
+                <div class="friend__content">
+                  <span class="friend__name">
+                    Song
+                  </span>
+                  <span class="friend__bottom-text">
+                    Going home!
+                  </span>
+                </div>
               </div>
-            </div>
-            <div class="chat__column">
-              <span class="chat__timestamp">Yesterday</span>
+              <div class="friend__column">
+                <div class="friend__now-listening">
+                  <span class="chat__timestamp">
+                    March 8
+                  </span>
+                </div>
+              </div>
             </div>
           </a>
         </li>
@@ -66,8 +75,9 @@
           ></a>
         </li>
         <li class="nav__list-item">
-          <a href="/index.html" class="nav__list-link"
-            ><i class="fas fa-comment"></i
+          <a href="/index.html" class="nav__list-link">
+            <div class="nav__badge">8</div>
+            <i class="fas fa-comment"></i
           ></a>
         </li>
         <li class="nav__list-item">
