--- a/more.html
+++ b/more.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/031722a6cc.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/style.css" />
     <title>More | Kakao Clone</title>
   </head>
 
@@ -95,22 +96,22 @@
         <h5 class="more__title">Suggestions</h5>
         <ul class="more__suggestions-list">
           <li class="more__suggestion suggestion">
-            <span class="suggestion-icon">
+            <span class="suggestion__icon">
               <i class="fas fa-quote-right fa-2x"></i>
             </span>
-            <span class="suggestion-title">Kakao Story</span>
+            <span class="suggestion__title">Kakao Story</span>
           </li>
           <li class="more__suggestion suggestion">
-            <span class="suggestion-icon">
+            <span class="suggestion__icon">
               <i class="fas fa-beer fa-2x"></i>
             </span>
-            <span class="suggestion-title">Kakao Friends</span>
+            <span class="suggestion__title">Kakao Friends</span>
           </li>
           <li class="more__suggestion suggestion">
-            <span class="suggestion-icon">
+            <span class="suggestion__icon">
               <i class="fas fa-gamepad fa-2x"></i>
             </span>
-            <span class="suggestion-title">Friends Gam</span>
+            <span class="suggestion__title">Friends Gam</span>
           </li>
         </ul>
       </section>
