--- a/find.html
+++ b/find.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/031722a6cc.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/style.css" />
     <title>Find | Kakao Clone</title>
   </head>
   <body>
@@ -39,7 +40,7 @@
     <main class="find">
       <header class="find__header">
         <ul class="find__header-list">
-          <li class="find__header-btn">
+          <li class="find__header-btn header-btn">
             <span class="header-btn__icon">
               <i class="fas fa-qrcode fa-2x"></i>
             </span>
@@ -47,7 +48,7 @@
               QR Code
             </span>
           </li>
-          <li class="find__header-btn">
+          <li class="find__header-btn header-btn">
             <span class="header-btn__icon">
               <i class="fas fa-user-plus fa-2x"></i>
             </span>
@@ -55,7 +56,7 @@
               Add by Contacts
             </span>
           </li>
-          <li class="find__header-btn">
+          <li class="find__header-btn header-btn">
             <span class="header-btn__icon">
               <i class="fas fa-passport fa-2x"></i>
             </span>
@@ -63,7 +64,7 @@
               Add by Id
             </span>
           </li>
-          <li class="find__header-btn">
+          <li class="find__header-btn header-btn">
             <span class="header-btn__icon">
               <i class="far fa-envelope fa-2x"></i>
             </span>
@@ -73,13 +74,13 @@
           </li>
         </ul>
       </header>
-      <ul class="find__recommanded">
+      <ul class="find__recommended">
         <h5 class="find__title">
           Recommanded Friends
         </h5>
         <li class="find__friend friend friend--lg">
           <div class="friend__column">
-            <img src="imgs/we.jpg" class="g-avatar friend__avatar" />
+            <img src="imgs/we.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Choi ShinWoo
