--- a/fridend.html
+++ b/fridend.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/031722a6cc.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/style.css" />
     <title>Friends | Kakao Clone</title>
   </head>
   <body>
@@ -38,7 +39,7 @@
     <!-- main -->
     <main class="friends">
       <header class="friends__header">
-        <div class="friends__friend friend friend--lg">
+        <div class="friends__friend friend">
           <div class="friend__column">
             <img src="imgs/we.jpg" class="g-avatar friend__avatar" />
             <div class="friend__content">
@@ -53,10 +54,10 @@
         </div>
       </header>
       <div class="friends__plus">
-        <h5 class="friends__plus-title">Plus friend</h5>
+        <h5 class="friends__title">Plus friend</h5>
         <div class="friends__friend friend">
-          <div class="friend__colum">
-            <img src="imgs/we.jpg" class="g-avatar friend__avatar" />
+          <div class="friend__column">
+            <img src="imgs/we.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Plus Friend
@@ -69,7 +70,7 @@
         <h5 class="friends__title">Friends 14</h5>
         <li class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img src="imgs/we.jpg" class="g-avatar friend__avatar" />
+            <img src="imgs/we.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Choi ShinWoo
@@ -83,8 +84,8 @@
             <div class="friend__now-listening">
               <span>
                 박효신
+                <i class="fas fa-play"></i>
               </span>
-              <i class="fas fa-play"></i>
             </div>
           </div>
         </li>
