--- a/settings.html
+++ b/settings.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/031722a6cc.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/style.css" />
     <title>Settings | Kakao Clone</title>
   </head>
   <body>
@@ -28,8 +29,8 @@
     <!-- header -->
     <header class="header">
       <div class="header__header-column">
-        <a href="more.html">
-          <i class="fas fa-arrow-left fa-2x"></i>
+        <a href="more.html" class="header__back-btn">
+          <i class="fas fa-arrow-left"></i>
         </a>
         <h1 class="header__title">Settings</h1>
       </div>
@@ -39,7 +40,30 @@
         </span>
       </div>
     </header>
+    <!-- main -->
     <main class="settings">
+      <section class="settings__sections">
+        <ul class="settings__list">
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="fas fa-lock"></i>
+            </span>
+            <span class="settings__title">Privacy</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="far fa-bell"></i>
+            </span>
+            <span class="settings__title">Notification</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="far fa-user"></i>
+            </span>
+            <span class="settings__title">Friends</span>
+          </li>
+        </ul>
+      </section>
       <section class="settings__sections">
         <ul class="settings__list">
           <li class="settings__setting">
